@@ -1,4 +1,4 @@
-// Philipp Klaus Krause, philipp@informatik.uni-frankfurt.de, pkk@spth.de, 2011
+// Philipp Klaus Krause, philipp@informatik.uni-frankfurt.de, pkk@spth.de, 2012
 //
 // (c) 2012 Goethe-Universität Frankfurt
 //
@@ -396,10 +396,10 @@ static int implement_lospre_assignment(const assignment_lospre &a, T_t &T, G_t &
   if(!calculation_edges.size())
     return(0);
 
-  std::cout << "Optimizing at " << ic->key << "\n";
+  //std::cout << "Optimizing at " << ic->key << "\n";
 
   tmpop = newiTempOperand (operandType (IC_RESULT (ic)), TRUE);
-  std::cout << "New tmpop: " << OP_SYMBOL(tmpop)->name << "\n";
+  //std::cout << "New tmpop: " << OP_SYMBOL(tmpop)->name << "\n";
   for(typename std::set<edge_desc_t>::iterator i = calculation_edges.begin(); i != calculation_edges.end(); ++i)
     split_edge(T, G, *i, ic, tmpop);
 
@@ -412,7 +412,7 @@ static int implement_lospre_assignment(const assignment_lospre &a, T_t &T, G_t &
       typename boost::graph_traits<G_t>::in_edge_iterator e = in_edges(*v, G).first;
       if(!(a.global[boost::source(*e, G)] || a.global[*v] && !G[*v].invalidates))
         continue;
-      std::cout << "Substituting ic " << G[*v].ic->key << ".\n";
+      //std::cout << "Substituting ic " << G[*v].ic->key << ".\n";
       // Todo: split unconnected iTemps, unify with dummy iTemps.
       iCode *ic = G[*v].ic;
       IC_LEFT(ic) = 0;
